--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.1.1-canary.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
